Changelog
=========


2.1 (unreleased)
----------------

- using PLONE_APP_CONTENTTYPES_FIXTURE to make tests plone5 compatible
  [pbauer]


2.0 (2013-10-29)
----------------

- Changed package layout
  [gborelli]

- remove style key from zgeo_geometry metadata
  [gborelli]

- move IGeoCoder utility to c.geo.mapwidget
  [gborelli]

- remove IGeoCoder adapter
  [gborelli]


1.7 (2013-04-11)
----------------

- Fixed permission on GeoreferencingAnnotator. See #3 [gborelli]
- Moved showCoordinatesTab to c.geo.contentlocations [gborelli]
- Added hasCoordinates method to GeoreferencingAnnotator to check
  whether an object has been georeferenced or not [gborelli]
- Added a method in order to hidden Coordinates tab for dexterity
  content types [valentinaB]
- Changed Version of Geopy (moved from 0.94.2 to 0.95) to support
  Google api v3 in geocoder [cippino]


1.6 (2013-01-28)
----------------

- Fixed MANIFEST.in [gborelli]


1.5 (2013-01-28)
----------------

- Added Sphinx documentation [gborelli]
- Added travis-ci configurations [gborelli]
- Moved reindexDocSubscriber to collective.geo.contentlocations [gborelli]
- Refactored test and removed dependency from old Topic content type [gborelli]


1.4 (2012-02-11)
----------------
* changed tests using plone.app.testing [gborelli]
* Added IGeoCoder utility [gborelli]
* Marked as deprecated IGeoCoder adapter [gborelli]
* Added removeGeoInterface to remove coordinates from an object [mircoangelini]


0.1.3 (2011-09-05)
------------------
* plone 4.1 fixes [gborelli]
* include Products.CMFCore to make plone 4.1 happy [nan010]
* changed Browser import from Testing.testbrowser [gborelli]
* added z3c.autoinclude entry point [gborelli]


0.1.2 (2010-12-28)
------------------

* Moved IGeoView from c.geo.contentlocations


0.1.1 (2010-11-13)
------------------

* moved geocoderview to portal root


0.1 (2010-10-31)
----------------

* removed zgeo.geographer dependency
* zgeo.plone.geographer code refactoring