@@ -1,4 +1,4 @@
-import unittest2 as unittest
+import unittest
 import doctest
 
 from zope.component import eventtesting
